fix: set sidebar overflow to scroll

--- a/src/components/sidebar/styles.scss
+++ b/src/components/sidebar/styles.scss
@@ -4,6 +4,7 @@
   margin-left: 8px;
   background-color: #fff;
   border-top: 5px solid transparent;
+  overflow-y: scroll;
 
   @include border-colors(
     $critical: 'critical',
